multi fixes, mailto on mobile

--- a/_sass/_mods.scss
+++ b/_sass/_mods.scss
@@ -1,9 +1,10 @@
+//Center Graphics
 #logo,
 #deko,
 #deko_vid{
   @include margin;
 }
-
+//Limit logo max/min size
 #logo{
   width: 20%;
   max-width: 160px;
@@ -11,79 +12,87 @@
   margin-bottom: 25px;
   margin-top: 5px;
 }
+//Limit deko max/min size
 #deko{
   max-width: 850px;
   width: 100%;
   padding-bottom: 25px;
 }
-
 #deko_vid{
   max-width: 1000px;
   width: 100%;
 }
-
 #deko_vid{
   display: block;
 }
-
+//Center objects
 .center{
   @include center;
 }
-
+//Responsive email address
 .email p{
 @include responsive-font(2.5vw, 16px, 100px);
 margin-top: 5px;
 }
-
+//Responsive body text
 .text p{
 @include responsive-font(1.5vw, 16px, 40px);
 margin-top: 5px;
 }
-
+//Responsive copyright
 .copy p{
 @include responsive-font(1.2vw, 12px, 35px);
 margin-top: 5px;
 margin-bottom: 5px;
 }
-
+//Make contact links grey, remove top/bottom margins
 #insta,
-#mail{
+#mail,
+#mail_mo{
   color: grey;
   margin-top: 0px;
   margin-bottom: 0px;
 }
+//Center font awesome icons
 .social{
   text-align: center;
 }
+//Include social media styles mixin
 .social .fa{
   @include social;
 }
+//Set instragram icon height
 #insta{
   line-height: 54px;
   margin-top: 10px;
 }
-#mail{
+//Set mail icon height
+#mail,
+#mail_mo{
   line-height: 53px;
   margin-top: 10px;
 }
+//Max width body text
 #text p{
   max-width: 1400px;
   @include margin;
   margin-bottom: 23px;
 }
+//Padding for mobile screens
 @media (max-width: 500px){
   #text p{
     padding-left: 5%;
     padding-right: 5%;
   }
 }
+//Padding for small-medium screens
 @media (min-width: 501px) and (max-width: 1920px){
   #text p{
     padding-left: 15%;
     padding-right: 15%;
   }
 }
-
+//Navigational arrow styles
 #footer{
   position: fixed;
   display: block;
@@ -93,6 +102,7 @@ margin-bottom: 5px;
   z-index: 100;
   padding-bottom: 25px;
 }
+//Navigational arrow max size
 #footer img{
   width: 5%;
   max-width: 30px;
@@ -113,12 +123,16 @@ margin-bottom: 5px;
     //display: block;
   //}
 //}
+//Social size control
 @media (max-width: 768px){
-  .font{
-    font-size: 1.2em;
+  #mail,
+  #mail_mo,
+  #insta{
+    font-size: 1.4em;
+    width: 15px;
   }
 }
-
+//Make social icons fade to #000 on hover
 #insta{
   -o-transition:.5s;
   -ms-transition:.5s;
@@ -126,7 +140,8 @@ margin-bottom: 5px;
   -webkit-transition:.5s;
   transition:.5s;
 }
-#mail{
+#mail,
+#mail_mo{
   -o-transition:.5s;
   -ms-transition:.5s;
   -moz-transition:.5s;
@@ -136,9 +151,13 @@ margin-bottom: 5px;
 #insta:hover{
   color: #000;
 }
+#mail_mo:hover{
+  color: #000;
+}
 #mail:hover{
   color: #000;
 }
+//Remove padding for gif
 #gif .container{
   padding-left: 0px;
   padding-right: 0px;
@@ -147,17 +166,33 @@ margin-bottom: 5px;
   padding-left: 0px;
   padding-right: 0px;
 }
-
 #noodle{
   display: none;
 }
+//Make email link take up same space as text
 #email p{
   padding: 3.54166vw 0 3.54166vw 0;
   margin: 5px 0 30px 0;
 }
+//Hide email link
 #email{
   display: none;
 }
+//Remove top margin for text
 .copy p{
   margin-top: 0px;
+}
+#mail,
+#mail_mo{
+  display: none;
+}
+@media (max-width: 767px){
+  #mail_mo{
+    display: inline-block;
+  }
+}
+@media (min-width: 768px){
+  #mail{
+    display: inline-block;
+  }
 }
